fix: overflow hidden in match history

--- a/front/profile.css
+++ b/front/profile.css
@@ -541,7 +541,23 @@ two factor */
     flex-direction: column;
     color: black;
     align-items:center; 
+    overflow-y: auto;
     gap: 10px;
+}
+
+.profile-history-container::-webkit-scrollbar {
+    width: 8px; 
+}
+
+.profile-history-container::-webkit-scrollbar-thumb {
+    background-color: #003369;
+    border-radius: 10px; 
+}
+
+.profile-history-container::-webkit-scrollbar-track {
+    background-color: #2b5f97; 
+    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+	border-radius: 10px;
 }
 
 .profile-history-container h3 {
@@ -560,7 +576,6 @@ two factor */
     height: 100px;
     width: 90%;
     border-radius: 8px; 
-    overflow: hidden; 
     display: flex;
     align-items: center;
     justify-content: center;
