--- a/front/tree.css
+++ b/front/tree.css
@@ -123,11 +123,7 @@
   }
 
 
-  /* Dark Theme */
-/* .theme-dark {
-    background: #0e1217;
-    border-color: #040607;
-  } */
+  /* tournament tree */
   .theme-dark .match-lines .line {
     background: #000000;
   }
